array.island.Island.scala.error
Erreur de compilation :
Island:3: error: not found: value count
  for (i<-1 to (count(num)-1)) {if ((num(i-1))<(num(i))) {x=x+1}}; return(x) 
                ^