array.island.Island.scala.code
def island(num:Array[Int]): Int = {var x:Int=0
  for (i<-1 to (count(num)-1)) {if ((num(i-1))<(num(i))) {x=x+1}}; return(x) 
}